--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav-bar">
         <div class="left">
             <div class="logo">
-                <img src="/Assets/logo.png" alt="" />
+                <img src="Assets/logo.png" alt="" />
             </div>
             <div class="search-box">
                 <div class="input-box">
@@ -48,9 +48,9 @@
     <main>
         <section id="feature">
             <div class="main-display">
-                <img id="display-img" src="/Assets/features/feature_1.jpg" alt="">
+                <img id="display-img" src="Assets/features/feature_1.jpg" alt="">
                 <div class="captions">
-                    <img id="caption-logo" src="/Assets/features/feature_1_logo.png" alt="">
+                    <img id="caption-logo" src="Assets/features/feature_1_logo.png" alt="">
                     <p class="sub">Buy Now</p>
                     <p>
                         Spider-Man: Miles Morales is a superhero game based on the popular Marvel Comics character of
@@ -63,7 +63,7 @@
                 <div id="indicator-1" class="indicator-item">
                     <div class="progress-bar">
                         <div class="icon-logo">
-                            <img src="/Assets/features/feature_1_indi.jpg" alt="">
+                            <img src="Assets/features/feature_1_indi.jpg" alt="">
                         </div>
                         Spider-Man: Miles Morales
                     </div>
@@ -71,7 +71,7 @@
                 <div id="indicator-2" class="indicator-item">
                     <div class="progress-bar">
                         <div class="icon-logo">
-                            <img src="/Assets/features/feature_2_indi.jpg" alt="">
+                            <img src="Assets/features/feature_2_indi.jpg" alt="">
                         </div>
                         Gamehub Coupons
                     </div>
@@ -79,7 +79,7 @@
                 <div id="indicator-3" class="indicator-item">
                     <div class="progress-bar">
                         <div class="icon-logo">
-                            <img src="/Assets/features/feature_3_indi.jpg" alt="">
+                            <img src="Assets/features/feature_3_indi.jpg" alt="">
                         </div>
                         Crime boss
                     </div>
@@ -87,7 +87,7 @@
                 <div id="indicator-4" class="indicator-item">
                     <div class="progress-bar">
                         <div class="icon-logo">
-                            <img src="/Assets/features/feature_4_indi.jpg" alt="">
+                            <img src="Assets/features/feature_4_indi.jpg" alt="">
                         </div>
                         The Callisto Protocols
                     </div>
@@ -95,7 +95,7 @@
                 <div id="indicator-5" class="indicator-item">
                     <div class="progress-bar">
                         <div class="icon-logo">
-                            <img src="/Assets/features/feature_5_indi.jpg" alt="">
+                            <img src="Assets/features/feature_5_indi.jpg" alt="">
                         </div>
                         Holyday Sell
                     </div>
@@ -113,8 +113,8 @@
 
         document.getElementById(`indicator-1`).classList.remove("active");
 
-        document.querySelector(`#display-img`).src = `/Assets/features/feature_${i}.jpg`;
-        document.querySelector(`#caption-logo`).src = `/Assets/features/feature_${i}_logo.png`;
+        document.querySelector(`#display-img`).src = `Assets/features/feature_${i}.jpg`;
+        document.querySelector(`#caption-logo`).src = `Assets/features/feature_${i}_logo.png`;
 
         setTimeout(() => {
             i += 1
